# delivery-market-analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: Home.py
app/pages/: 10_LateNight.py  2_Pricing.py  3_Locations.py  4_Value.py  5_Geo.py  6_VegVegan.py  7_CrossPlatform.py  8_Outliers.py  9_Chains.py
data/: README.md
sql/: 90_views_semantic.sql
src/: apply_sql.py  build_duckdb.py
src/delivery_market_analysis/: cli.py  demo.py  matching.py  queries.py
tests/: test_ingest_views.py  test_smoke.py
