[project]
name = "delivery-market-analysis"
version = "0.1.0"
description = "Delivery market analysis (SQLite -> DuckDB -> Streamlit BI dashboard)"
requires-python = ">=3.11,<=3.14"
dependencies = [
  "duckdb",
  "pandas",
  "pyarrow",
  "streamlit",
  "plotly",
  "pydeck",
  "rapidfuzz",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dma = "delivery_market_analysis.cli:main"



